fix(navigation): add z-index to navigation module

--- a/src/scripts/components/main/navigation/navigation.module.styl
+++ b/src/scripts/components/main/navigation/navigation.module.styl
@@ -6,6 +6,7 @@
   right: emCalc(22px)
   display: flex
   gap: emCalc(30px)
+  z-index: 1
 
 .storiesContainer
   display: flex
